kibana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f /Users/tatsiana_marfel/Documents/learning/microservices-journey/yoke-docker/docker-compose.yml
    kompose.service.type: loadbalancer
    kompose.version: 1.22.0 (955b78124)
    kompose.image-pull-policy: Never
  creationTimestamp: null
  labels:
    io.kompose.service: kibana
  name: kibana
  namespace: yoke-network
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kibana
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f /Users/tatsiana_marfel/Documents/learning/microservices-journey/yoke-docker/docker-compose.yml
        kompose.service.type: loadbalancer
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/yoke-network: "true"
        io.kompose.service: kibana
    spec:
      containers:
        - image: docker.elastic.co/kibana/kibana:7.2.0
          name: kibana
          ports:
            - containerPort: 5601
          resources: {}
      restartPolicy: Always
status: {}
