postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f /Users/tatsiana_marfel/Documents/learning/microservices-journey/yoke-docker/docker-compose.yml
    kompose.version: 1.22.0 (955b78124)
    kompose.image-pull-policy: Never
  creationTimestamp: null
  labels:
    io.kompose.service: postgres
  name: postgres
  namespace: yoke-network
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgres
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f /Users/tatsiana_marfel/Documents/learning/microservices-journey/yoke-docker/docker-compose.yml
        kompose.version: 1.22.0 (955b78124)
        kompose.image-pull-policy: Never
      creationTimestamp: null
      labels:
        io.kompose.network/yoke-network: "true"
        io.kompose.service: postgres
    spec:
      containers:
        - env:
            - name: POSTGRES_PASSWORD
              value: postgres
          image: postgres
          name: yoke-postgres
          ports:
            - containerPort: 5432
          imagePullPolicy: IfNotPresent
          resources: {}
      restartPolicy: Always
status: {}
