yoke-zipkin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f /Users/tatsiana_marfel/Documents/learning/microservices-journey/yoke-docker/docker-compose.yml
    kompose.service.type: loadbalancer
    kompose.version: 1.22.0 (955b78124)
    kompose.image-pull-policy: Never
  creationTimestamp: null
  labels:
    io.kompose.service: yoke-zipkin
  name: yoke-zipkin
  namespace: yoke-network
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: yoke-zipkin
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f /Users/tatsiana_marfel/Documents/learning/microservices-journey/yoke-docker/docker-compose.yml
        kompose.service.type: loadbalancer
        kompose.version: 1.22.0 (955b78124)
        kompose.image-pull-policy: Never
      creationTimestamp: null
      labels:
        io.kompose.network/yoke-network: "true"
        io.kompose.service: yoke-zipkin
    spec:
      containers:
        - image: openzipkin/zipkin
          name: yoke-zipkin
          ports:
            - containerPort: 9411
          imagePullPolicy: IfNotPresent
          resources: {}
      restartPolicy: Always
status: {}
