kafdrop-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f /Users/tatsiana_marfel/Documents/learning/microservices-journey/yoke-docker/docker-compose.yml
    kompose.service.type: loadbalancer
    kompose.version: 1.22.0 (955b78124)
    kompose.image-pull-policy: Never
  creationTimestamp: null
  labels:
    io.kompose.service: kafdrop
  name: kafdrop
  namespace: yoke-network
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    io.kompose.service: kafdrop
  type: LoadBalancer
status:
  loadBalancer: {}
