postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f /Users/tatsiana_marfel/Documents/learning/microservices-journey/yoke-docker/docker-compose.yml
    kompose.version: 1.22.0 (955b78124)
    kompose.image-pull-policy: Never
  creationTimestamp: null
  labels:
    io.kompose.service: postgres
  name: postgres
  namespace: yoke-network
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: postgres
status:
  loadBalancer: {}
