zookeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f /Users/tatsiana_marfel/Documents/learning/microservices-journey/yoke-docker/docker-compose.yml
    kompose.service.type: loadbalancer
    kompose.version: 1.22.0 (955b78124)
    kompose.image-pull-policy: Never
  creationTimestamp: null
  labels:
    io.kompose.service: zookeeper
  name: zookeeper
  namespace: yoke-network
spec:
  ports:
    - name: "2181"
      port: 2181
      targetPort: 2181
  selector:
    io.kompose.service: zookeeper
  type: LoadBalancer
status:
  loadBalancer: {}
